--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
         }
 
         nav a {
-            color: #000000;
+            color: #ed1212;
             text-decoration: none;
             padding: 15px 20px;
             display: block;
